--- a/index.css
+++ b/index.css
@@ -132,3 +132,6 @@ a:hover {
   transform: rotateY(180deg);
   background-color: #f2f2f2;
 }
+body, p, span, div, a, h1, h2, h3, h4, h5, h6 {
+  color: #00627F !important;
+}
